--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,7 @@ python-nbxmpp (0.5.3-0.1) unstable; urgency=medium
   * New upstream release.
   * This is a new maintainer upload.
   * Remove fix-raise-statements.patch (applied upstream).
+  * Add python3-gi as build dependency so that tests in Python3.5 don't fail.
 
  -- Mathias Ertl <mati@jabber.at>  Sat, 05 Dec 2015 12:30:38 +0100
 
