--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-nbxmpp (0.5.6-0.1) unstable; urgency=medium
+
+  * New upstream release.
+
+ -- Mathias Ertl <mati@jabber.at>  Fri, 09 Jun 2017 11:59:17 +0200
+
 python-nbxmpp (0.5.3-0.1) unstable; urgency=medium
 
   * New upstream release.
