--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-nbxmpp (0.6.7-0.1) unstable; urgency=medium
+
+  * New upstream version
+
+ -- Mathias Ertl <mati@jabber.at>  Sat, 08 Sep 2018 11:49:08 +0200
+
 python-nbxmpp (0.5.6-0.1) unstable; urgency=medium
 
   * New upstream release.
